# Practica2Redes

./: pyproject.toml  users.db
practica2/: pyproject.toml
practica2/tests/: test_practica2.py
