[tool.poetry]
name = "practica2"
version = "0.1.0"
description = ""
authors = ["EricGiovanni <giovanny.m.t@ciencias.unam.mx>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
bidict = "^0.21.4"
click = "^8.0.3"
Flask-Login = "^0.5.0"
Flask-SocketIO = "^5.1.1"
Flask-SQLAlchemy = "^2.5.1"
greenlet = "^1.1.2"
itsdangerous = "^2.0.1"
Jinja2 = "^3.0.3"
MarkupSafe = "^2.0.1"
python-decouple = "^3.5"
python-engineio = "^4.3.0"
python-socketio = "^5.5.0"
SQLAlchemy = "^1.4.29"
Werkzeug = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
