[tool.poetry]
name = "practica2"
version = "0.1.0"
description = ""
authors = ["EricGiovanni <giovanny.m.t@ciencias.unam.mx>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
